class ResidenteComunicacion {
    constructor({ id, idResidente, idComunicado, fechaEnvio }) {
      this.id = id;
      this.idResidente = idResidente;
      this.idComunicado = idComunicado;
      this.fechaEnvio = fechaEnvio;
    }
  }
  
  module.exports = ResidenteComunicacion;
  